# hdf5-embedding-store

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/: results.md  run.py
demo/: run.py
results/int8_gzip/: benchmark_results.json
results/wikipedia_v2/: benchmark_results.json
scripts/: prepare_corpus.py
src/hdf5_embedding_store/: __init__.py  base.py  hdf5_blosc_store.py  hdf5_cached_store.py  hdf5_float16_store.py  hdf5_int8_store.py  hdf5_ivf_store.py  hdf5_store.py  numpy_store.py  sqlite_store.py
src/hdf5_embedding_store.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_stores.py
