[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hdf5-embedding-store"
version = "0.1.0"
description = "HDF5-backed embedding store for agent RAG pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "h5py>=3.9",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "tiktoken>=0.6",
]

[project.optional-dependencies]
blosc = ["hdf5plugin>=4.3"]
corpus = [
    "datasets>=2.18",
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
